# seg

./: .env-dev  .gitignore  Dockerfile  Makefile  README.md  compose-dev.yml  compose-prod.yml  compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
migrations/: __init__.py  base.py  migrate.py
migrations/migrations/: 0_initial.py
seg/: __init__.py  app.py  main.py
seg/api/: __init__.py
seg/api/v1/: __init__.py  schema.py  segment.py  segment_user.py  user.py
seg/core/: __init__.py  backoff.py  config.py  error.py  format.py  log.py  type.py
seg/db/: __init__.py  pg.py  redis.py
seg/migrations/: migrate.py
seg/migrations/migrations/: 0_initial.py  __init__.py
seg/model/: __init__.py  model.py  segment.py
seg/service/: __init__.py  cache.py  db.py  segment.py  segment_user.py  user.py
