[project]
name = 'seg'
version = '0.1.0'
description = 'VK Segmentation service'
readme = 'README.md'
requires-python = '>=3.13'
dependencies = [
    "asyncpg>=0.31.0",
    "asyncpg-stubs>=0.31.0",
    'fastapi[standard]>=0.123.3',
    'orjson>=3.11.4',
    'pydantic>=2.12.5',
    'pydantic-settings>=2.12.0',
    'python-dotenv>=1.2.1',
    "python-multipart>=0.0.20",
    "redis>=7.1.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    'deptry>=0.24.0',
    'flake8>=7.3.0',
    'flake8-pyproject>=1.2.4',
    'mypy>=1.19.0',
    'pytest>=9.0.1',
    'pytest-asyncio>=1.3.0',
    'ruff>=0.14.7',
    'wemake-python-styleguide>=1.4.0',
]

[project.scripts]
executive = 'src:main'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['auth']

[tool.mypy]
files = ['auth']
strict = true

[tool.ruff]
target-version = 'py313'
line-length = 80
fix = true
exclude = ['tests']

[tool.ruff.format]
quote-style = 'single'
docstring-code-format = false

[tool.ruff.lint]
select = [
    'A',    # flake8-builtins
    'ANN',  # flake8-annotations
    'B',    # flake8-bugbear
    'BLE',  # flake8-blind-except
    'C4',   # flake8-comprehensions
    'C90',  # maccabe
    'COM',  # flake8-commas
    'D',    # pydocstyle
    'DTZ',  # flake8-datetimez
    'E',    # pycodestyle
    'ERA',  # flake8-eradicate
    'EXE',  # flake8-executable
    'F',    # pyflakes
    'FAST', # FastAPI
    'FBT',  # flake8-boolean-trap
    'FLY',  # pyflint
    'FURB', # refurb
    'G',    # flake8-logging-format
    'I',    # isort
    'ICN',  # flake8-import-conventions
    'ISC',  # flake8-implicit-str-concat
    'LOG',  # flake8-logging
    'N',    # pep8-naming
    'PERF', # perflint
    'PGH',  # pygrep-hooks
    'PIE',  # flake8-pie
    'PL',   # pylint
    'PT',   # flake8-pytest-style
    'PTH',  # flake8-use-pathlib
    'Q',    # flake8-quotes
    'RET',  # flake8-return
    'RSE',  # flake8-raise
    'RUF',  # ruff
    'S',    # flake8-bandit
    'SIM',  # flake8-simpify
    'SLF',  # flake8-self
    'SLOT', # flake8-slots
    'T100', # flake8-debugger
    'TRY',  # tryceratops
    'UP',   # pyupgrade
    'W',    # pycodestyle
    'YTT',  # flake8-2020
]

ignore = [
    'ANN401',   # dynamically typed expressions aren't a bad thing
    'COM812',   # trailing comma, conflicts with `ruff format`
    'ISC001',   # implicit string concat conflicts with `ruff format`
    'ISC003',   # prefer explicit string concat over implicit concat
    'PLR09',    # own complexity rules provided
    'TRY003',   # long exception messages from `tryceratops`
    'D401',     # this rule always does false positives

    # conflicting rules
    'D203',     # prefer no blank line before class docstring
    'D213',     # prefer multiline summary being placed on ''' line
]

external = ['WPS', 'DEP']

[tool.flake8]
# Configure WPS excludes

[tool.deptry.per_rule_ignores]
DEP002 = [
    'asyncpg-stubs',    # stubs are never used in code directly
    'orjson',           # required by FastAPI's ORJSONResponse
    'click',            # specifically downgraded to fight a nefarious bug
    'types-passlib',    # stubs are never used in code directly
]
